Fixed collapse of layout

--- a/Tab-Session-Manager/popup/popup.css
+++ b/Tab-Session-Manager/popup/popup.css
@@ -61,8 +61,7 @@ option {
 }
 
 #sessionsArea {
-    padding: 5px 2px;
-    margin-top: 5px;
+    width: 100%;
     height: 350px;
     overflow-y: auto;
 
@@ -71,7 +70,7 @@ option {
 .session {
     padding: 5px;
     padding-bottom: 0px;
-    margin: 10px 0px;
+    margin: 10px 5px;
     height: auto;
     border-radius: 3px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
